--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -2,6 +2,9 @@
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
+<div class="alert alert-success" role="alert" *ngIf="success">
+  Successfully Saved
+</div>
 
 <div class="card">
   <div class="card-body">
@@ -94,9 +97,9 @@
           <th>{{invoice.totalAmount}}</th>
         </tr>
         <tr>
-          <td colspan="5">
+          <td colspan="6">
           </td>
-          <td colspan="3">
+          <td colspan="2">
             <button class="btn btn-primary" (click)="saveInvoice()">Generate Invoice</button>
             <button class="btn btn-warning">Cancel Invoice</button>
           </td>
