--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -28,7 +28,7 @@
   <div class="col-md-8">
     <div class="card">
       <div class="card-body">
-        <form (ngSubmit)="submit()" name="clientForm" ngNativeValidate>
+        <form (ngSubmit)="submit()" name="userForm" ngNativeValidate>
           <div class="form-group">
             <div class="row">
               <div class="col-md-4">
@@ -48,12 +48,12 @@
               </div>
             </div>
             <br>
-            <div class="row">
+            <div class="row" *ngIf="showRoles">
               <div class="col-md-4">
                 <label for="role">User Role</label>
                 <select id="RoleSelect" name="roleSelect " class="form-control underlined" [(ngModel)]="userRole.roleCode">
-                  <option value="true" selected>ADMIN</option>
-                  <option value="false">USER</option>
+                  <option value="ADMIN" selected>ADMIN</option>
+                  <option value="USER">USER</option>
                 </select>
                 <button type="button" name="addRole" (click)="adduserRole(userRole.roleCode)" class="btn btn-secondary btn-sm">Add Role</button>
               </div>
@@ -62,11 +62,24 @@
                   <li *ngFor="let userRole of userRoles" class="list-group-item" style="cursor: pointer;">
                     {{userRole.roleCode}}
                     <span class="float-right">
-              <i class="fa fa-trash"></i>
+              <i (click)="deleteUserRole(userRole.id)" class="fa fa-trash"></i>
                   </span>
                   </li>
                 </ul>
               </div>
+            </div>
+            <hr/>
+            <div class="row">
+              <br/>
+              <div class="col-md-2">
+              <label for="password" >Password</label>
+              </div>
+              <div class="col-md-5">
+                <input type="password" class="form-control underlined" name="password" id="password" placeholder="Enter password" required="true" [(ngModel)]="user.password" >                </div>
+              <div class="col-md-5">
+                <input type="password" class="form-control underlined" name="retype_password" id="retype_password" placeholder="Re-type password"
+                  required=""> </div>
+
             </div>
 
           </div>
