--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -27,7 +27,7 @@
            </a>
           <ul class="sidebar-nav">
             <li>
-              <a routerLink="/invoice/0" routerLinkActive="active">New</a>
+              <a routerLink="/invoiceNew/0" routerLinkActive="active">New</a>
             </li>
             <li>
               <a routerLink="/invoice-search"> Search </a>
