Company get and edit functionality

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -63,11 +63,11 @@
       <li>
         <ul>
           <li class="customize">
-            Compay owner , address etc etc.,
+            <a routerLink="/company" routerLinkActive="active">Edit</a>
           </li>
         </ul>
         <a href="">
-         <i class="fa fa-cog"></i> Company Logo </a>
+         <i class="fa fa-cog"></i> Company </a>
       </li>
     </ul>
   </footer>
