--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -31,7 +31,10 @@
            </a>
           <ul class="sidebar-nav">
             <li>
-              <a routerLink="/invoiceNew/0" routerLinkActive="active">New</a>
+              <a routerLink="/invoiceNew/0" routerLinkActive="active">New PerformA</a>
+            </li>
+             <li>
+              <a routerLink="/invoiceNew/0" routerLinkActive="active">Generate Invoice</a>
             </li>
             <li>
               <a routerLink="/invoice-search"> Search </a>
