--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -38,6 +38,22 @@
             </li>
           </ul>
         </li>
+          <li>
+          <a href="">
+            <i class="fa fa-book"></i> Voucher
+            <i class="fa arrow"></i>
+           </a>
+          <ul class="sidebar-nav">
+            <li>
+              <a routerLink="/voucherNew/0" routerLinkActive="active">New</a>
+            </li>
+            <li>
+              <a routerLink="/voucher-search"> Search </a>
+            </li>
+          </ul>
+        </li>
+
+
         <!-- <li class="active">
           <a href="">
           <i class="fa fa-th-large"></i> test Sub menu
