--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -34,7 +34,7 @@
               <a routerLink="/invoiceNew/0" routerLinkActive="active">New PerformA</a>
             </li>
              <li>
-              <a routerLink="/invoiceNew/0" routerLinkActive="active">Generate Invoice</a>
+              <a routerLink="/generate-invoice" routerLinkActive="active">Generate Invoice</a>
             </li>
             <li>
               <a routerLink="/invoice-search"> Search </a>
