--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -9,9 +9,9 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-      <div class="col-md-2 "><b>Selected Client</b></div>
-      <div class="col-md-1">
-        <select (change)="loadSelectedClient()" [(ngModel)]="selClientId">
+      <div class="col-md-1 "><b>Client</b></div>
+      <div class="col-md-2">
+        <select (change)="loadSelectedClient()" class="form-control underlined" [(ngModel)]="selClientId">
         <option></option>
         <option *ngFor="let cli of clients" [ngValue]="cli.id" [selected]="cli.id === selClientId">{{cli.name}}</option>
          </select>
@@ -20,7 +20,7 @@
       <div class="col-md-3">{{invoice.performaId}}</div>
       <div class="col-md-2"><b>SAC code: </b></div>
       <div class="col-md-2">
-        <select (change)="loadSelectedSac()" [(ngModel)]="selSacId">
+        <select (change)="loadSelectedSac()" class="form-control underlined" [(ngModel)]="selSacId">
         <option></option>
         <option *ngFor="let sac of sacCodes" [ngValue]="sac.id" [selected]="sac.id === selSacId">{{sac.sacCode}}</option>
         </select>
@@ -52,7 +52,7 @@
     <table class="table">
       <tr>
         <th colspan="7">Particulars</th>
-        <th><button class="btn btn-success" (click)="addRow()" *ngIf="invoice.status!=='CANCELED'">AddRow</button></th>
+        <th><button class="btn btn-success" (click)="addRow()" *ngIf="!(invoice.status=='CANCELED' || invoice.type=='INVOICE')">AddRow</button></th>
       </tr>
       <tr>
         <th colspan="5">Item Description</th>
@@ -61,7 +61,10 @@
         <th>Amount</th>
       </tr>
       <tr *ngFor="let field of particulars;let i=index">
-        <td colspan="5" WIDTH="70%">
+
+        <td><button class="btn btn-sm btn-danger" (click)="deletParticulars(field.id)" *ngIf="field.id"><i class="fa fa-trash"></i></button></td>
+
+        <td colspan="4" WIDTH="70%">
           <textarea type="text" class="form-control" required="true" [(ngModel)]="field.itemDescription" (change)="calculateAmount(field)">
           </textarea>
         </td>
@@ -124,13 +127,13 @@
             
           </td>
           <td colspan="1">
-            <button class="btn btn-secondary" (click)="calculateTotal()" *ngIf="invoice.status!=='CANCELED'">Calculate Total</button>
+            <button class="btn btn-secondary" (click)="calculateTotal()" *ngIf="!(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Calculate Total</button>
           </td>
           <td colspan="1">
-            <button class="btn btn-primary" (click)="savePerformaInvoice()" *ngIf="invoice.status!=='CANCELED'">Save Invoice</button>
+            <button class="btn btn-primary" (click)="savePerformaInvoice()" *ngIf="!(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Save Invoice</button>
           </td>
           <td colspan="1">
-            <button class="btn btn-warning" (click)="cancelInvoice()" *ngIf="invoice.status!=='CANCELED'">Cancel Invoice</button>
+            <button class="btn btn-warning" (click)="cancelInvoice()" *ngIf="!(invoice.status=='CANCELED' || invoice.type=='INVOICE')">Cancel Invoice</button>
           </td>
         </tr>
       </tfoot>
