Updated Invoice Screan

--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -3,22 +3,105 @@
   {{errorMessage}}
 </div>
 <div class="alert alert-success" role="alert" *ngIf="success">
-  Successfully Saved
+  {{successMessage}}
 </div>
 
 <div class="card">
   <div class="card-body">
-     <div class="row">
-      <div class="col-md-3 "><b>Selected PerformA Invoice Id</b></div>
-      <div class="col-md-4">
-        <select (change)="loadSelectedPerformAInvoice()" [(ngModel)]="selPerformaId" class="form-control underlined" >
-        <option></option>
-        <option *ngFor="let ids of performaIds" [ngValue]="ids">{{ids}}</option>
-         </select>
-      </div>
-      <div class="col-md-2"><b>Invoice Date : </b></div>
-      <div class="col-md-3">
-        <input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [(ngModel)]="performa.invoiceDate" />
-      </div>
+    <table width="100%">
+      <thead>
+        <tr>
+          <th>PerformA Id</th>
+          <th>Invoice Id</th>
+          <th>Invoice Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{invoice.performaId}}</td>
+          <td>{{invoice.invoiceId}}</td>
+          <td><input type="date" class="form-control underlined" name="invoiceDate" id="invoiceDate" required="true" [ngModel]="invoice.invoiceDate | date:'yyyy-MM-dd'"
+              (ngModelChange)="myDate = $event" />
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<br/>
+<div class="card">
+  <div class="card-body">
+    <table width="100%" border="1" style="border-collapse:collapse;border:#f2f2f2 solid 1px;">
+      <thead>
+        <tr>
+          <th>Client Name</th>
+          <th colspan="3">Address</th>
+          <th>GSTIN</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr valign="top" >
+          <td>{{client.name}}</td>
+          <td colspan="3">{{client.addrLine1}},
+            {{client.addrLine2}},<br/>
+            {{client.city}}, {{client.state}}<br/>
+            {{client.pincode}}<br/>
+            {{client.phonePrimary}},{{client.email}}
+            </td>
+          <td>{{client.gstin}}</td>
+        </tr>
+        <tr valign="top">
+         <th colspan="5">Particulars</th>
+        </tr>
+        <tr valign="top">
+         <th>Item Description</th>
+         <th>Sac Code</th>
+         <th>Quantity</th>
+         <th>Rate</th>
+         <th>Amount</th>
+        </tr>
+        <tr valign="top" *ngFor="let field of particulars;let i=index">
+         <td >{{field.itemDescription}}</td>
+         <td>{{invoice.sacCode}}</td>
+         <td  align="right">{{field.quantity}}</td>
+         <td  align="right"><input class="form-control" style="width:100px;" (change)="calculateAmount(field)" type="number" [(ngModel)]="field.invoiceRate"/></td>
+         <td  align="right">{{field.calculatedInvoiceAmount}}</td>
+        </tr>
+        <tr>
+          <td colspan="4" align="right"><b>Sum</b></td>
+          <td align="right">{{invoice.totalInvoiceBeforeTax}}</td>
+        </tr>
+        <tr>
+          <td colspan="3" align="right">
+            CGST
+          </td>
+          <td  align="right">{{invoice.cgstInvoicePercent}}</td>
+          <td  align="right">{{invoice.cgstInvoice}}</td>
+        </tr>
+         <tr>
+          <td colspan="3" align="right">
+            SGST
+          </td>
+          <td align="right">{{invoice.sgstInvoicePercent}}</td>
+          <td  align="right">{{invoice.sgstInvoice}}</td>
+        </tr>
+         <tr>
+          <td colspan="3" align="right">
+            IGST
+          </td>
+          <td  align="right">{{invoice.igstInvoicePercent}}</td>
+          <td  align="right">{{invoice.igstInvoice}}</td>
+        </tr>
+         <tr>
+          <td colspan="4" align="right"><b>Total</b></td>
+          <td align="right"><b>{{invoice.totalInvoiceAmount}}</b></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="card">
+  <div class="card-body">
+    <button class="btn btn-primary float-right">Generate Invoice</button>
   </div>
 </div>
