--- a/src/assets/css/app-seagreen.css
+++ b/src/assets/css/app-seagreen.css
@@ -1447,13 +1447,13 @@ span a {
   display: -ms-inline-flexbox;
   display: inline-flex; }
   .pagination .page-item .page-link {
-    color: #4bcf99; }
+    color: #432fb5; }
   .pagination .page-item.active .page-link,
   .pagination .page-item.active .page-link:focus,
   .pagination .page-item.active .page-link:hover {
     color: #fff;
-    border-color: #4bcf99;
-    background-color: #4bcf99; }
+    border-color: #432fb5;
+    background-color: #432fb5; }
 
 .sameheight {
   display: -webkit-box;
